2005-07-06  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/return.c: Clean up some string buffer usage.

	* include/ns.h:
	* nsd/driver.c:
	* nsd/binder.c: Add backlog arg to Ns_SockListenUnix().

	* nsd/binder.c:
	* nsd/driver.c: Localize Windows ifdefs as much as possible.

	* nsd/connio.c:
	* nsd/queue.c:
	* nsd/return.c:
	* nsd/driver.c:
	* nsd/server.c:
	* nsd/nsd.h:
	* nsd/nsconf.c:
	* nsd/nsconf.h: Cleanup default configuration by removing unneeded
	values and actually using the defaults throughout the code where
	appropriate.  Some per-server limits have been made per-driver.

2005-07-05  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/fastpath.c:
	* tests/http_byteranges.test:
	* NEWS: Add back preliminary support for HTTP range requests.

	* configure.in:
	* configure: Update version to 4.99.1 and regenerate configure
	script.

	* TAG naviserver-4.99.0-release.

	* Makefile: Add DOAP file to list of files to be included in
	release tarball.

	* nsd/fastpath.c:
	* tests/http_byteranges.test: Temporarily remove in-progress
	support for HTTP Range requests.

	* NEWS: Add release date and remove reference to byte ranges.
	Mention new Ns_ConnPrintfHeaders() function.

	* include/nscheck.h: Microsoft's feeble compiler can't handle
	macro varargs.  New usage is: NS_GNUC_NONNULL((x, y, z)).

	* naviserver.rdf: Add license and category information to DOAP
	file and fix default namespace so it validates.

2005-06-30  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/cookies.c (GetConn): No longer check whether the response
	headers have already been sent for Tcl commands. The check was broken
	and not useful.

2005-06-30  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/conn.c: fixed Bug #1230179 which caused the server crash
	when calling ns_startcontent outside of the connection scope.

2005-06-29  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/fastpath.c: Made all tests pass successfully. Changed parser